# BoxelBengine

./: .gitignore  .gitmodules  README.md
.github/workflows/: cmake-single-platform.yml
BoxelBengine/: .gitignore  BoxelBengine.vcxproj  BoxelBengine.vcxproj.filters  CMakeLists.txt  imgui.ini
BoxelBengine/res/: TODO.txt
BoxelBengine/res/shaders/: Basic2D.shader  Basic3D.shader  BasicInstance.shader  BasicLighting.shader  BasicVoxel.shader
BoxelBengine/src/: Application.cpp  Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  GameWindow.cpp  GameWindow.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.h
BoxelBengine/src/multithreading/: ThreadRunner.cpp  ThreadRunner.h
BoxelBengine/src/primitives/: CubeGameObject.cpp  CubeGameObject.h  InstancedGameObject.cpp  InstancedGameObject.h  TriangleGameObject.cpp  TriangleGameObject.h  VoxelGameObject.cpp  VoxelGameObject.h
BoxelBengine/src/scenes/: ClearColorScene.cpp  ClearColorScene.h  CubeScene.cpp  CubeScene.h  InstanceScene.cpp  InstanceScene.h  MotionScene.cpp  MotionScene.h  Scene.cpp  Scene.h  TextureScene.cpp  TextureScene.h
BoxelBengine/test/: tests.cpp
